Bug 455984 - Increasing memory with "open in new window" feature
Summary: Increasing memory with "open in new window" feature
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-26 21:09 UTC by Jan Bidler
Modified: 2024-03-28 21:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-06-26 21:09:39 UTC
SUMMARY
The "open in new window" feature seems to use memory every time it is used and does not seem to reclaim it back when the windows are closed


STEPS TO REPRODUCE
1. Open NeoChat and login
2. Open a room ~20 times in a new window
3. Close all new windows  

OBSERVED RESULT
Memory usage keeps and at ~20 windows was at about ~600MB. After I closed all windows, NeoChat still kept consuming 600MB

EXPECTED RESULT
After the windows are closed, memory should be freed

SOFTWARE/OS VERSIONS
Linux: Linux Mint 20
KDE Plasma Version: 5.18.8

NeoChat: 22.04
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5

ADDITIONAL INFORMATION
Comment 1 Tobias Fella 2024-03-28 21:06:29 UTC
Git commit 882ead57152afa600661f1aae820003c21b7b28e by Tobias Fella.
Committed on 28/03/2024 at 21:05.
Pushed by tfella into branch 'master'.

Remove external room window feature

At its best, this worked ok-ish, though it was always missing basic features.

It's also a massive memory leak and significantly complicates the codebase.
(Which is not yet cleaned up by this commit)

Currently, it is entirely broken and noone noticed or cared enough to report or fix that.

M  +0    -1    src/CMakeLists.txt
M  +0    -12   src/qml/ContextMenu.qml
D  +0    -64   src/qml/RoomWindow.qml
M  +0    -14   src/qml/main.qml
M  +0    -6    src/roommanager.cpp
M  +0    -7    src/roommanager.h

https://invent.kde.org/network/neochat/-/commit/882ead57152afa600661f1aae820003c21b7b28e