src/qml/main.qml
@@ -186,15 +186,6 @@ Kirigami.ApplicationWindow {
             roomItem.forceActiveFocus();
         }
 
-        function onOpenRoomInNewWindow(room) {
-            const secondaryWindow = roomWindow.createObject(undefined, {
-                currentRoom: room,
-                connection: root.connection
-            });
-            secondaryWindow.width = root.width - pageStack.get(0).width;
-            secondaryWindow.show();
-        }
-
         function onAskDirectChatConfirmation(user) {
             askDirectChatConfirmationComponent.createObject(QQC2.ApplicationWindow.overlay, {
                 user: user
@@ -413,11 +404,6 @@ Kirigami.ApplicationWindow {
         CreateRoomDialog {
             connection: root.connection
         }
-    }
-
-    Component {
-        id: roomWindow
-        RoomWindow {}
     }
 
     Component {
